<resources>
    <string name="app_name">Camera Date Folders</string>
    <string name="title_home">Action</string>
    <string name="title_dashboard">Paths</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_info">About</string>
    <string name="str_start">START</string>
    <string name="str_revert">REVERT</string>
    <string name="str_stop">STOP</string>
    <string name="str_app_name">Camera Date Folders</string>
    <string name="str_app_description">Automatically sort your photos to date related subdirectories, based on timestamp encoded in filenames</string>
    <string name="str_author">Andreas Kromke</string>
    <string name="str_sel_path">Select Camera Folder</string>
    <string name="str_sel_dest_path">(Optional) Select Destination Folder</string>
    <string name="str_scheme">Subfolder Scheme</string>
    <string name="str_full_file_access">Allow Full File Access:</string>
    <string name="str_force_file_mode">Force File Mode (Android 7, 8, 9):</string>
    <string name="str_force_file_mode_full_access">Use File Mode (~100 times faster):</string>
    <string name="str_dry_run">Dry Run (debug mode):</string>
    <string name="str_skip_tidy">Skip Tidy Phase (debug mode):</string>
    <string name="str_compact_scheme">Compact Folder Names:</string>
    <string name="str_backup_copy">Make Copies (Backup):</string>
    <string name="str_press_start">Press SORT to sort your photos or REVERT to move them back to base directory.</string>
    <string name="str_press_backup">Press BACKUP to copy and sort your photos or FLATTEN to backup and flatten them.</string>
    <string name="str_no_cam_path">No camera folder selected. Go to Paths view!</string>
    <string name="str_no_dest_path">No destination folder for backup selected. Go to Paths view!</string>
    <string name="str_must_select_dcim_path">First select camera folder!</string>
    <string name="str_paths_overlap">ERROR: Destination must not overlap source path!</string>
    <string name="str_paths_same">Destination same as source. Removing.</string>
    <string name="str_file_manage_permission_denied">Manage all Files permission denied. Hence, the application is forced to use the slooooow SAF.</string>
    <string name="str_auto_activate_file_mode">File mode activated.</string>
    <string name="str_auto_deactivate_file_mode">File mode deactivated.</string>
    <string name="str_no_file_write">Directory write access denied in File mode. Switch to SAF mode or choose different directory!</string>
    <string name="str_ask_dest_folder">The destination folder is optional. Select one, if you want to move the photos outside of the camera folder or if you want to manage a backup copy.</string>
    <string name="str_reset_preferences">Reset Preferences</string>
    <string name="str_NeedManageFilesPermission">Full file access is needed to avoid slooooow SAF.</string>
    <string name="str_NotAvailableInPlayStoreVersion">This functionality is not available in the Play Store version of this program, because Google denies it for security reasons. You can either use SAF mode or install the F-Droid program version.</string>
    <string name="str_cancel">"Cancel"</string>
    <string name="str_prefix">File Name Prefix (e.g. \"PXL_\")</string>
    <string name="str_prefix_leave">Leave as is</string>
    <string name="str_prefix_append">Move to End of File Name</string>
    <string name="str_prefix_remove">Remove</string>
    <string name="str_theme">Theme</string>
    <string name="str_follow_system_theme">Follow System Theme</string>
    <string name="str_dark_mode">Dark Mode</string>
    <string name="str_amoled_mode">AMOLED Mode</string>
</resources>
