<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preferences.PreferencesFragment">

    <!-- The bottom margin of the scroll view is necessary, otherwise content is hidden behind navigation bar. FWFR. -->
    <!-- For Android 16, bottom margin must be >= 64dp (was 54dp) -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:fadeScrollbars="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/schemeRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/button_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/str_scheme"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/button_scheme_y_m_d"
                    android:textColor="@color/ButtonTextColour"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965/1965-07/1965-07-21"
                    tools:ignore="HardcodedText" />
                <!-- android:textColor="@color/white" -->
                <!-- does not work: -->
                <!-- android:theme="@style/ButtonStyle" -->

                <RadioButton
                    android:id="@+id/button_scheme_m_d"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965-07/1965-07-21"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_scheme_y_d"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965/1965-07-21"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_scheme_y_m"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965/1965-07"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_scheme_d"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965-07-21"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_scheme_m"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965-07"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_scheme_y"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="1965"
                    tools:ignore="HardcodedText" />

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchCompactFolderNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/str_compact_scheme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchBackupCopy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_backup_copy" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchFullFileAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_full_file_access" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchForceFileMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_force_file_mode" />

            <RadioGroup
                android:id="@+id/prefixRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/button_prefix_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp"
                    android:text="@string/str_prefix"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/button_prefix_leave"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/str_prefix_leave"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_prefix_append"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/str_prefix_append"
                    tools:ignore="HardcodedText" />

                <RadioButton
                    android:id="@+id/button_prefix_remove"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/str_prefix_remove"
                    tools:ignore="HardcodedText" />

            </RadioGroup>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchDryRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/str_dry_run" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchSkipTidy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_skip_tidy" />

            <Button
                android:id="@+id/resetPreferences"
                style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
                android:textColor="#a0a0a0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/str_reset_preferences" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
